# Epple-II

./: .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .gitpod_copy.Dockerfile  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  COPYING.other  COPYING.sdl  Dockerfile  LICENSE.other  Makefile.am  Makefile.mingw  README  README-hacking  README.asciidoc  README.md  code-of-conduct.md  config.site  configure.ac  default.nginx  docker-compose-web.yml  docker-compose.yml  epple2.spec  nginx.conf  setup.conf  sonar-project.properties  supervisord.conf  transistors
.github/workflows/: build.yaml  publish.yaml  sonarcloud.yaml
conf/: CMakeLists.txt  Makefile.am  epple2.a2bare.conf  epple2.a2bare.conf.in  epple2.a2dos31.conf  epple2.a2dos31.conf.in  epple2.a2dos33.conf.in  epple2.a2loaded.conf  epple2.a2loaded.conf.in  epple2.a2pbare.conf.in  epple2.a2pdos33.conf  epple2.a2pdos33.conf.in  epple2.a2ploaded.conf  epple2.a2ploaded.conf.in  epple2.conf  epple2.conf.in  epple2.mingw  epple2.rev0bare.conf  epple2.rev0bare.conf.in  epple2.visual6502.conf  epple2.visual6502.conf.in
doc/: .gitignore  Makefile  Makefile.am  building.asciidoc  cards.asciidoc  cassette.asciidoc  commands.asciidoc  configuration.asciidoc  display.asciidoc  download.asciidoc  index.asciidoc  index.html  keyboard.asciidoc  overview.asciidoc  paddles.asciidoc  screenshots.asciidoc  speaker.asciidoc  usermanual.asciidoc
docs/: configuration.md  ideas.txt  index.md  screenshots.md  usermanual.md
installer/: .gitignore  Makefile.am  epple2.wxs
rom/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.mingw  clock.md5  epple2sys.m4  epple2sys.md5  epple2sys.s65  stdin.md5  stdout.md5  stdout.s65
share/: FixBundle.cmake.in  Info.plist.in
share/Resources/: epple2.fbp  epple2.xrc
share/Resources/apple/: .gitignore  fetch.sh
share/Resources/conf/: epple2.a2dos31.conf  epple2.a2dos33.conf  epple2.a2loaded.conf  epple2.a2pbare.conf  epple2.a2pdos33.conf  epple2.a2ploaded.conf  epple2.conf
share/Resources/rom/: .gitignore  CMakeLists.txt  Makefile  clock.m4  epple2sys.m4  stdin.m4
src/: .gitignore  CMakeLists.txt  Circuit.cpp  Circuit.h  Common.cpp  Common.h  Cpu6502.cpp  Cpu6502.h  Cpu6502Helper.cpp  Cpu6502Helper.h  E2wxApp.cpp  E2wxApp.h  E2wxFrame.cpp  E2wxFrame.h  Emu6502.cpp  Emu6502.h  KeyEventHandler.cpp  KeyEventHandler.h  KeyRepeatHandler.cpp  KeyRepeatHandler.h  Makefile.am  Makefile.mingw  PreferencesDialog.cpp  PreferencesDialog.h  SDL_win32_main.c  SegmentCache.cpp  SegmentCache.h  SegmentTypes.h  StateCalculator.cpp  StateCalculator.h  Trace.cpp  Trace.h  TransCache.cpp  TransCache.h  TransNetwork.cpp  TransNetwork.h  a2colorsobserved.cpp  a2colorsobserved.h  abstractcpu.h  addressbus.cpp  (+137 more)
supervisor/commands/: app  both  web
supervisor/includes/: epple2.supervisor  web.supervisor
